--- a/app/src/main/res/menu/nav_customer.xml
+++ b/app/src/main/res/menu/nav_customer.xml
@@ -1,24 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/nav_home"
+        android:enabled="true"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="Home"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/nav_cart"
+        android:enabled="true"
         android:icon="@drawable/ic_cart"
         android:title="Cart"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/nav_chat"
+        android:enabled="true"
         android:icon="@drawable/ic_chat"
         android:title="Chat"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/nav_profile"
+        android:enabled="true"
         android:icon="@drawable/ic_person_outline_black_24dp"
         android:title="Profile"
         app:showAsAction="ifRoom" />
