--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,10 @@
     android:orientation="vertical"
     tools:context="com.example.adila.e_wed.MainActivity">
 
+    <!--<include-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--layout="@layout/include_search_filter"/>-->
     <FrameLayout
         android:id="@+id/content"
         android:layout_width="match_parent"
