--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,28 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!--view line-->
+    <style name="viewline">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">@color/colorPrimaryDark</item>
+    </style>
+
+    <!--LOGIN-->
+    <style name="login_img">
+        <item name="android:layout_width">30dp</item>
+        <item name="android:layout_height">30dp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_marginHorizontal">@dimen/spacer_10</item>
+    </style>
+
+    <style name="login_txt">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textSize">@dimen/text_hig</item>
+    </style>
 
     <!--MENU KATEGORI-->
     <style name="menu_kategori_card">
@@ -69,6 +91,12 @@
     <style name="image_100">
         <item name="android:layout_width">100dp</item>
         <item name="android:layout_height">100dp</item>
+    </style>
+    <style name="image_150">
+        <item name="android:layout_width">150dp</item>
+        <item name="android:layout_height">150dp</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:src">@drawable/logo</item>
     </style>
 
     <style name="title_bar">
